--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,571 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
+@inproceedings{kereluik2010coding,
+  title={Coding pre-service teacher lesson plans for TPACK},
+  author={Kereluik, Kristen and Casperson, Greg and Akcaoglu, Mete},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={3889--3891},
+  year={2010},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@inproceedings{akcaoglu2011using,
+  title={Using games in classroom: All tutors and no stories make a virtual world a dull game},
+  author={Akcaoglu, Mete},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={64--69},
+  year={2011},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@inproceedings{akcaoglu2011refining,
+  title={Refining TPACK rubric through online lesson plans},
+  author={Akcaoglu, Mete and Kereluik, Kristen and Casperson, Greg},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={4260--4264},
+  year={2011},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@inproceedings{boyer2009zon,
+  title={The Zon project: Creating a virtual environment for learning Chinese language and culture},
+  author={Boyer, D Matthew and Akcaoglu, Mete},
+  booktitle={E-Learn: World Conference on E-Learning in Corporate, Government, Healthcare, and Higher Education},
+  pages={2389--2393},
+  year={2009},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@mastersthesis{akcaouglu2008exploring,
+  title={Exploring technology integration approaches and practices of preservice and in-service English language teachers},
+  author={Akcao{\u{g}}lu, Mete},
+  year={2008}
+}
+
+@article{akcaoglu2006review,
+  title={Review of podOmatic},
+  author={Akcaoglu, Mete},
+  journal={The JALT CALL Journal},
+  volume={2},
+  number={2},
+  pages={67--81},
+  year={2006},
+  publisher={http://journal.jaltcall.org/articles/2\_2\_Akcaoglu.pdf}
+}
+
+@inproceedings{pernsteiner2010understanding,
+  title={Understanding player activity in a game-based virtual learning environment: A case for data-driven instructional design},
+  author={Pernsteiner, Silvia M and Boyer, D Matthew and Akcaoglu, Mete},
+  booktitle={E-Learn: World Conference on E-Learning in Corporate, Government, Healthcare, and Higher Education},
+  pages={763--763},
+  year={2010},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@inproceedings{akcaoglu2012teaching,
+  title={Teaching Problem Solving through Game Design: Reflections on Game Design and Learning Summer Camp},
+  author={Akcaoglu, Mete and Boyer, D Matthew and Kereluik, Kristen},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={3--7},
+  year={2012},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@inproceedings{akcaoglu2012new,
+  title={New Media Literacy Skills of Middle School Students in Turkey: Students Are Ready, Are the Schools?},
+  author={Akcaoglu, Mete and Kereluik, Kristen and Boyer, D Matthew},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={1621--1625},
+  year={2012},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@article{roseth2013blending,
+  title={Blending synchronous face-to-face and computer-supported cooperative learning in a hybrid doctoral seminar},
+  author={Roseth, Cary and Akcaoglu, Mete and Zellner, Andrea},
+  journal={TechTrends},
+  volume={57},
+  number={3},
+  pages={54--59},
   year={2013},
-  organization={IEEE}
+  publisher={Springer US}
+}
+
+@article{gumus2013instructional,
+  title={Instructional leadership in Turkish primary schools: An analysis of teachers’ perceptions and current policy},
+  author={Gumus, Sedat and Akcaoglu, Mete},
+  journal={Educational Management Administration \& Leadership},
+  volume={41},
+  number={3},
+  pages={289--302},
+  year={2013},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
+@article{koehler2013technological,
+  title={The technological pedagogical content knowledge framework for teachers and teacher educators},
+  author={Koehler, Matthew J and Mishra, Punya and Akcaoglu, Mete and Rosenberg, Joshua M},
+  journal={ICT integrated teacher education: A resource book},
+  pages={2--7},
+  year={2013},
+  publisher={Commonwealth Educational Media Centre for Asia Vancouver, Canada}
+}
+
+@article{akcaoglu2014cognitive,
+  title={Cognitive outcomes from the Game-Design and Learning (GDL) after-school program},
+  author={Akcaoglu, Mete and Koehler, Matthew J},
+  journal={Computers \& Education},
+  volume={75},
+  pages={72--81},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{akcaoglu2015policy,
+  title={Policy, practice, and reality: exploring a nation-wide technology implementation in Turkish schools},
+  author={Akcaoglu, Mete and Gumus, Sedat and Bellibas, Mehmet Sukru and Boyer, D Matthew},
+  journal={Technology, Pedagogy and Education},
+  volume={24},
+  number={4},
+  pages={477--491},
+  year={2015},
+  publisher={Routledge}
+}
+
+@inproceedings{akcaoglu2014teaching,
+  title={Teaching problem solving through making games: Design and implementation of an innovative and technology-rich intervention},
+  author={Akcaoglu, Mete},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={597--604},
+  year={2014},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@incollection{akcaoglu2013using,
+  title={Using MMORPGs in classrooms: Stories vs. teachers as sources of motivation},
+  author={Akcaoglu, Mete},
+  booktitle={Cases on digital game-based learning: Methods, models, and strategies},
+  pages={15--24},
+  year={2013},
+  publisher={IGI Global}
+}
+
+@article{bowman2014see,
+  title={“I see smart people!”: Using Facebook to supplement cognitive and affective learning in the university mass lecture},
+  author={Bowman, Nicholas David and Akcaoglu, Mete},
+  journal={The internet and higher education},
+  volume={23},
+  pages={1--8},
+  year={2014},
+  publisher={JAI}
+}
+
+@article{akcaoglu2014learning,
+  title={Learning problem-solving through making games at the game design and learning summer program},
+  author={Akcaoglu, Mete},
+  journal={Educational Technology Research and Development},
+  volume={62},
+  number={5},
+  pages={583--600},
+  year={2014},
+  publisher={Springer US}
+}
+
+@inproceedings{rosenberg2015comparative,
+  title={A Comparative Longitudinal Case Study of the Use of Scientific Modeling in the Pedagogical Practice of Two Fifth-Grade Science Teachers},
+  author={Rosenberg, Joshua M and Schwarz, Christina V and Lee, Silvia Wen-Yu and Akcaoglu, Mete},
+  booktitle={National Association for Research in Science Teaching},
+  year={2015}
+}
+
+@phdthesis{akcaoglu2013cognitive,
+  title={Cognitive and motivational impacts of learning game design on middle school children},
+  author={Akcaoglu, Mete},
+  year={2013},
+  school={Michigan State University}
+}
+
+@article{akcaoglu2016design,
+  title={Design and implementation of the game-design and learning program},
+  author={Akcaoglu, Mete},
+  journal={TechTrends},
+  volume={60},
+  number={2},
+  pages={114--123},
+  year={2016},
+  publisher={Springer US}
+}
+
+@inproceedings{akcaoglu2015finding,
+  title={Finding the connection between Game-Design and Problem-Solving: Game-Design and Learning Programs},
+  author={Akcaoglu, Mete},
+  booktitle={Fourth Annual Scholarship of STEM Teaching and Learning Conference},
+  year={2015}
+}
+
+@inproceedings{boyer2015connecting,
+  title={Connecting game and instructional design through development},
+  author={Boyer, Matthew and Akcao{\u{g}}lu, Mete and Pernsteiner, Silvia},
+  booktitle={EdMedia+ Innovate Learning},
+  pages={1641--1650},
+  year={2015},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@article{hampelreview,
+  title={Review of podOmatic},
+  author={Hampel, In},
+  journal={JALT CALL},
+  pages={67}
+}
+
+@article{akcaoglu2016teaching,
+  title={Teaching to teach (with) game design: Game design and learning workshops for preservice teachers},
+  author={Akcaoglu, Mete and Kale, Ugur},
+  journal={Contemporary Issues in Technology and Teacher Education},
+  volume={16},
+  number={1},
+  pages={60--80},
+  year={2016}
+}
+
+@inproceedings{akcaoglu2015comparative,
+  title={A comparative longitudinal case study of the use of scientific modeling in the pedagogical practice of two fifth-grade science teachers},
+  author={Akcaoglu, Mete and Rosenberg, Joshua M},
+  booktitle={National Association for Research on Science Teaching},
+  year={2015}
+}
+
+@inproceedings{strahler2015pedagogy,
+  title={Pedagogy 2.0: The Evolving Discourse over Social Media in Education},
+  author={Strahler, Douglas and Akcaoglu, Mete and Bowman, Nicholas David},
+  booktitle={Eastern Communication Association, Instructional Communication Division},
+  year={2015}
+}
+
+@inproceedings{akcaoglu2015teaching,
+  title={Teaching Problem-Solving Skills Through Game-Design: Game-Design and Learning Courses},
+  author={Akcaoglu, Mete},
+  booktitle={National Youth-At-Risk Conference},
+  year={2015}
+}
+
+@inproceedings{lee2015makerspaces,
+  title={Makerspaces in higher education: Design, development, implementation, and research for teacher education and beyond},
+  author={Lee, Eunbae and Akcaoglu, Mete and Dousay, Tonia A and Boyer, David Matthew and Brynteson, Kristin},
+  booktitle={Association for Educational Communications \& Technology},
+  year={2015}
+}
+
+@inproceedings{hamilton2015examining,
+  title={Examining the Substitution Augmentation Modification Redefinition (SAMR) Model for instructional design and technology integration},
+  author={Hamilton, Erica R and Akcaoglu, Mete and Rosenberg, Joshua M},
+  booktitle={Association for Educational Communications \& Technology},
+  year={2015}
+}
+
+@inproceedings{rosenberg2015tweeting,
+  title={Tweeting USA: An examination of state educational Twitter hashtags (SETHs)},
+  author={Rosenberg, Joshua M and Akcaoglu, Mete and Hamilton, Erica R and Greenhalgh, Spencer P and Koehler, Matthew J},
+  booktitle={Association for Educational Communications \& Technology},
+  year={2015}
+}
+
+@inproceedings{hamilton2015substitution,
+  title={The Substitution-Augmentation-Modification-Redefinition (SAMR) framework for technology integration: Challenges to its use for guiding K-12 teachers’ pedagogy and practice},
+  author={Hamilton, Erica R and Rosenberg, Joshua M and Akcaoglu, Mete},
+  booktitle={American Educational Research Association (AERA) Annual Meeting},
+  year={2015}
+}
+
+@inproceedings{lee2015innovation,
+  title={The Innovation Studio: A MakerSpace for higher education},
+  author={Lee, Eunbae and Akcaoglu, Mete and Jensen, Lucas},
+  booktitle={Design, Development, and Research Conference},
+  year={2015}
+}
+
+@inproceedings{akcaoglu2015impact,
+  title={Impact of group size on social presence in asynchronous learning environments},
+  author={Akcaoglu, Mete and Lee, Eunbae},
+  booktitle={Association for Educational Communications \& Technology},
+  year={2015}
+}
+
+@inproceedings{akcaoglu2015best,
+  title={Best Practices for Designing Synchronous and Asynchronous Online Teaching for Adult Learners},
+  author={Akcaoglu, Mete and Rosenberg, Joshua M},
+  booktitle={Society of Information Technology and Teacher Education Annual Meeting},
+  year={2015}
+}
+
+@inproceedings{rosenberg2016state,
+  title={State Educational Twitter Hashtags: An Introduction and Research Agenda},
+  author={Rosenberg, Joshua and Koehler, Matthew and Akcaoglu, Mete and Greenhalgh, Spencer and Hamilton, Erica},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={355--360},
+  year={2016},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@article{akcaoglu2016increasing,
+  title={Increasing social presence in online learning through small group discussions},
+  author={Akcaoglu, Mete and Lee, Eunbae},
+  journal={The international review of research in open and distributed learning},
+  volume={17},
+  number={3},
+  year={2016}
+}
+
+@article{akcaoglu2016using,
+  title={Using instructor-led Facebook groups to enhance students’ perceptions of course content},
+  author={Akcaoglu, Mete and Bowman, Nicholas David},
+  journal={Computers in Human Behavior},
+  volume={65},
+  pages={582--590},
+  year={2016},
+  publisher={Pergamon}
+}
+
+@article{hamilton2016substitution,
+  title={The Substitution Augmentation Modification Redefinition (SAMR) Model: a Critical Review and Suggestions for its Use},
+  author={Hamilton, Erica R and Rosenberg, Joshua M and Akcaoglu, Mete},
+  journal={TechTrends},
+  volume={60},
+  pages={433--441},
+  year={2016},
+  publisher={Springer US}
+}
+
+@incollection{akcaoglu2016teaching,
+  title={Teaching Complex Problem Solving Through Digital Game Design},
+  author={Akcaoglu, Mete and Hodges, Charles B and Sonnleitner, Philipp and Gutierrez, Antonio P},
+  booktitle={Handbook of research on serious games for educational applications},
+  pages={217--233},
+  year={2016},
+  publisher={IGN}
+}
+
+@article{rosenberginvestigation,
+  title={An investigation of State Educational Twitter Hashtags (SETHs) as affinity spaces Joshua M. Rosenberg1, Spencer P. Greenhalgh1, Matthew J. Koehler1, Erica R. Hamilton2, and Mete Akcaoglu3 Michigan State University1, Grand Valley State University2, Georgia Southern University3 Correspondence concerning this article should be addressed to Joshua M. Rosenberg},
+  author={Rosenberg, Joshua M and Greenhalgh, Spencer P and Koehler, Matthew J and Hamilton, Erica R and Akcaoglu, M}
+}
+
+@article{rosenberg2016investigation,
+  title={An investigation of state educational Twitter hashtags (SETHs) as affinity spaces},
+  author={Rosenberg, Joshua M and Greenhalgh, Spencer P and Koehler, Matthew J and Hamilton, Erica R and Akcaoglu, Mete},
+  journal={E-learning and Digital Media},
+  volume={13},
+  number={1-2},
+  pages={24--44},
+  year={2016},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{gutierrez2016supporting,
+  title={Supporting Metacognitive Awareness and Strategy Use Through Digital Photography in a Rural Title I School},
+  author={Gutierrez de Blume, Antonio P and Akcaoglu, Mete and Chambers, Wendy L},
+  journal={National Youth-At-Risk Journal},
+  volume={2},
+  number={1},
+  pages={20},
+  year={2016}
+}
+
+@inproceedings{rosenberg2017tale,
+  title={A tale of two Twitters: Synchronous and asynchronous use of the same hashtag},
+  author={Rosenberg, Joshua and Akcaoglu, Mete and Willet, K Bret Staudt and Greenhalgh, Spencer and Koehler, Matthew},
+  booktitle={Society for Information Technology \& Teacher Education International Conference},
+  pages={283--286},
+  year={2017},
+  organization={Association for the Advancement of Computing in Education (AACE)}
+}
+
+@article{soomro2018development,
+  title={Development of an instrument to measure Faculty’s information and communication technology access (FICTA)},
+  author={Soomro, Kamal Ahmed and Kale, Ugur and Curtis, Reagan and Akcaoglu, Mete and Bernstein, Malayna},
+  journal={Education and information technologies},
+  volume={23},
+  number={1},
+  pages={253--269},
+  year={2018},
+  publisher={Springer US}
+}
+
+@article{baek2016pe,
+  title={PE Teachers' Perceptions of Technology-Related Learning Experiences: A Qualitative Investigation},
+  author={Baek, Jun-Hyung},
+  year={2016}
+}
+
+@incollection{lee2017sociability,
+  title={Sociability of Online Learning Environments: Examining Discussion Group Sizes and Social Network Sites},
+  author={Lee, Eunbae and Akcaoglu, Mete},
+  booktitle={Learning, Design, and Technology},
+  pages={1--16},
+  year={2017},
+  publisher={Springer International Publishing}
+}
+
+@article{kale2018role,
+  title={The role of relevance in future teachers’ utility value and interest toward technology},
+  author={Kale, Ugur and Akcaoglu, Mete},
+  journal={Educational Technology Research and Development},
+  volume={66},
+  number={2},
+  pages={283--311},
+  year={2018},
+  publisher={Springer US}
+}
+
+@article{akcaoglu2018outcomes,
+  title={Outcomes from a self-generated utility value intervention on fifth and sixth-grade students’ value and interest in science},
+  author={Akcaoglu, Mete and Rosenberg, Joshua M and Ranellucci, John and Schwarz, Christina V},
+  journal={International Journal of Educational Research},
+  volume={87},
+  pages={67--77},
+  year={2018},
+  publisher={Pergamon}
+}
+
+@article{akcaogluauthor,
+  title={Author’s final pre-print version of},
+  author={Akcaoglu, M and Rosenberg, JM and Ranellucci, J and Schwarz, CV}
+}
+
+@inproceedings{caster2018integrating,
+  title={Integrating Lego Robotics Into a 5th Grade Cross Curricular Unit to Promote the Development of Narrative Writing Skills},
+  author={Caster-Failing, Shelli and Akcaoglu, Mete and Woodrum, Valerie and Morris, Valerie and McNeely, Jay},
+  year={2018}
+}
+
+@article{kale2018computational,
+  title={Computational what? Relating computational thinking to teaching},
+  author={Kale, Ugur and Akcaoglu, Mete and Cullen, Theresa and Goh, Debbie and Devine, Leah and Calvert, Nathan and Grise, Kara},
+  journal={TechTrends},
+  volume={62},
+  number={6},
+  pages={574--584},
+  year={2018},
+  publisher={Springer US}
+}
+
+@article{kale2018contextual,
+  title={Contextual factors influencing access to teaching computational thinking},
+  author={Kale, Ugur and Akcaoglu, Mete and Cullen, Theresa and Goh, Debbie},
+  journal={Computers in the Schools},
+  volume={35},
+  number={2},
+  pages={69--87},
+  year={2018},
+  publisher={Routledge}
+}
+
+@article{akcaoglu2019teaching,
+  title={Teaching systems thinking through game design},
+  author={Akcaoglu, Mete and Green, Lucy Santos},
+  journal={Educational Technology Research and Development},
+  volume={67},
+  number={1},
+  pages={1--19},
+  year={2019},
+  publisher={Springer US}
+}
+
+@article{akcaoglu2018using,
+  title={Using Facebook groups to support social presence in online learning},
+  author={Akcaoglu, Mete and Lee, Eunbae},
+  journal={Distance Education},
+  volume={39},
+  number={3},
+  pages={334--352},
+  year={2018},
+  publisher={Routledge}
+}
+
+@article{akcaoglu2018guest,
+  title={Guest Editors' Introduction: Tinkering in Technology-Rich Design Contexts},
+  author={Akcaoglu, Mete and Kale, Ugur},
+  journal={Interdisciplinary Journal of Problem-Based Learning},
+  volume={12},
+  number={2},
+  pages={11},
+  year={2018},
+  publisher={Purdue University Press}
+}
+
+@article{akcaogluinternational,
+  title={International Review of Research in Open and Distributed Learning},
+  author={Akcaoglu, Mete and Lee, Eunbae}
+}
+
+@article{akcaoglu2019analysis,
+  title={An Analysis of\# TECHtalkGA: A weekly Twitter chat for Educators in Georgia},
+  author={Akcaoglu, Mete and Hodges, Charles B},
+  year={2019}
+}
+
+@article{greenhalgh2020identifying,
+  title={Identifying multiple learning spaces within a single teacher-focused Twitter hashtag},
+  author={Greenhalgh, Spencer P and Rosenberg, Joshua M and Willet, K Bret Staudt and Koehler, Matthew J and Akcaoglu, Mete},
+  journal={Computers \& education},
+  volume={148},
+  pages={103809},
+  year={2020},
+  publisher={Pergamon}
+}
+
+@article{willetidentifying,
+  title={Identifying multiple learning spaces within a single teacher-focused Twitter hashtag Spencer P. Greenhalgh University of Kentucky Joshua M. Rosenberg University of Tennessee},
+  author={Willet, K Bret Staudt and Koehler, Matthew J and Akcaoglu, Mete}
+}
+
+@article{soomro2020digital,
+  title={Digital divide among higher education faculty},
+  author={Soomro, Kamal Ahmed and Kale, Ugur and Curtis, Reagan and Akcaoglu, Mete and Bernstein, Malayna},
+  journal={International Journal of Educational Technology in Higher Education},
+  volume={17},
+  number={1},
+  pages={1--16},
+  year={2020},
+  publisher={SpringerOpen}
+}
+
+@article{kale2020problem,
+  title={Problem Solving and Teaching How to Solve Problems in Technology-Rich Contexts},
+  author={Kale, Ugur and Akcaoglu, Mete},
+  journal={Peabody Journal of Education},
+  volume={95},
+  number={2},
+  pages={127--138},
+  year={2020},
+  publisher={Routledge}
+}
+
+@article{akcaoglu2021exploration,
+  title={An Exploration of Factors Impacting Middle School Students’ Attitudes Toward Computer Programming},
+  author={Akcaoglu, Mete and Rosenberg, Joshua M and Hodges, Charles B and Hilpert, Jonathan C},
+  journal={Computers in the Schools},
+  volume={38},
+  number={1},
+  pages={19--35},
+  year={2021},
+  publisher={Routledge}
+}
+
+@article{akcaoglu2021understanding,
+  title={Understanding children’s problem-solving strategies in solving game-based logic problems},
+  author={Akcaoglu, Mete and Jensen, Lucas J and Gonzalez, Daisy},
+  journal={International Journal of Technology in Education and Science (IJTES)},
+  volume={5},
+  number={2},
+  pages={245--257},
+  year={2021}
+}
+
+@article{prosne2014gameybased,
+  title={GameYbased practice versus traditional practice in computerYbased writing strategy training: Effects on motivation and achievement},
+  author={ProsNe, A and Roscoe, RD and Mcnamara, DS},
+  journal={Educational Technology, Research and Development},
+  volume={62},
+  number={5},
+  year={2014}
 }
